--- a/index.html
+++ b/index.html
@@ -28,10 +28,23 @@
       <a href="http://pastebin.com/u6xHr2Vm" class="btn">Download Build #1-Version 1.0</a>
   
     </section>
-
-    <section class="main-content">
-  <img src="http://orig03.deviantart.net/e7c2/f/2012/218/f/1/dayz_mod_logo_by_lexhorv-d59zm2x.png" alt="Mountain View" style="width:752px;height:359px;">
-
+<div id="parallax" class="portal-bg"></div>
+<section class="hero">
+    <div class="row">
+        <div class="small-12 columns">
+            <div class="hero__bg">
+                <h1 class="logo__text">DayZ Mod</h1>
+            </div>
+            <div class="hero__logo"><img src="http://orig03.deviantart.net/e7c2/f/2012/218/f/1/dayz_mod_logo_by_lexhorv-d59zm2x.png"/></div>
+            <div class="hero__cta">
+            <a href="/starwars/battlefront "
+               class="cta cta--rounded cta--play cta--play-bf transition external">
+                NOW AVAILABLE – LEARN MORE</a>
+            </div>
+        </div>
+    </div>
+</section>
+ 
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-DayZ" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to DayZ.</h3>
 
