--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="page-header">
       <h1 class="project-name">DayZ</h1>
       <h2 class="project-tagline"></h2>
-      <a href="https://github.com/MagikModder/DayZ-Code" class="btn">View SRC on GitHub</a>
+      <a href="https://github.com/MagikModder/DayZ-Code" class="btn">Source - Github</a>
       <a href="http://pastebin.com/u6xHr2Vm" class="btn">Download Build #1-Version 1.0</a>
   
     </section>
