--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>DayZ Mod™ - DayZ - Official Mod</title>
+    <title>Sierra Leone™ - Undetected Cheats - Official Unturned Premium Cheats</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -18,10 +18,10 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">DayZ</h1>
+      <h1 class="project-name">Sierra Leone Premium Cheats</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/MagikModder/DayZ-Code" class="btn">Source - Github</a>
-      <a href="http://pastebin.com/u6xHr2Vm" class="btn">Download Build #1-Version 1.0</a>
+      <a href="http://pastebin.com/u6xHr2Vm" class="btn">Download Build #563-Version 1.1</a>
   
     </section>
 <div id="parallax" class="portal-bg"></div>
@@ -29,20 +29,20 @@
     <div class="row">
         <div class="small-12 columns">
             <div class="hero__bg">
-                <h1 class="logo__text">DayZ Mod</h1>
+                <h1 class="logo__text"></h1>
             </div>
             <div class="hero__logo"><img src="http://orig03.deviantart.net/e7c2/f/2012/218/f/1/dayz_mod_logo_by_lexhorv-d59zm2x.png"/></div>
             <div class="hero__cta">
             <a href="/starwars/battlefront "
                class="cta cta--rounded cta--play cta--play-bf transition external">
-                NOW AVAILABLE – LEARN MORE</a>
+                </a>
             </div>
         </div>
     </div>
 </section>
  
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-DayZ" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to DayZ.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-DayZ" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Sierra Leone.</h3>
 
 
 <p>DayZ is an open world survival based game. So we made a mod off of it. again. An unknown infection has wiped out most of the world's population. Go Solo or team up with friends to take on the world as you choose your path in this brutal and chilling landscape using whatever means you stumble upon to survive.</p>
@@ -51,7 +51,7 @@
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Features.</h3>
 
-<p>DayZ Mod includes everything from the original but with more. There are over 10 new guns, Vehicles, New armor, New Animations. Its so much better, you would barely recognize it as the same mod.</p>
+<p>Sierra Leone is the only legit non detectable cheats for Unturned 3.18.x. To inject You select any program and the injector will use the selected program as a 'middleman' injector to keep the cheat undetected.</p>
 <img src="http://lh5.ggpht.com/JHrc_iSAxB7VZWX7ME1_WO6vGiUoyTWgbqvNqd7xleB0bci5nvNpRj7jo5gFiPsXPSqzrV3E9FBhA3jmhBaqOw=s400" alt="Mountain View" style="width:359px;height:359px;">
 <img src="http://media-elerium.cursecdn.com/avatars/28/784/635833866402908908.png" alt="Mountain View" style="width:359px;height:359px;">
 
